pushing mobile fixes for case study alignment

--- a/css/index.css
+++ b/css/index.css
@@ -269,6 +269,10 @@ img.about-photo {
   .scroll {
     display: none;
   }
+  .img__wrap {
+    margin-right: 0;
+    margin-top: 8rem;
+  }
   .about-copy {
     margin-left: 0;
     margin-top: 9rem;
